fixes button alignment and link on home page

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -116,6 +116,10 @@ main {
 				margin-bottom: 2em;
 			}
 
+			& > p.center {
+				text-align: center;
+			}
+
 			& > h3 {
 				font-size: 1.5em;
 			}
